[package]
name = "sublimation-livewire"
version = "0.1.0"
authors = ["A.W. Stanley <aws@reversing.space>"]
license = "Zlib"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "sublimation_livewire"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies.neon]
version = "0.2.0"

[dependencies.sublimation]
path = "../../"